@startuml ArchitekturUML

top to bottom direction

' skinparam nodesep 12
' skinparam ranksep 18
' scale max 600 width

!include adapter/adapter.puml
' !include ports/ports.puml

package "Kern" as Kern {

    class Synthesizer {
        + synthTask()
        + screenTask()
        + IOTask()
    }

    class Signal {
        + add(...)
        + multiply(...)
    }

    class Sound {
        + add(...)
        + multiply(...)
    }

    class Menu {
       + move()
       + select()
       + draw()
    }

    class Envelope {
        + apply(value)
        + getValue()
    }
}

Adapter -[hidden]down-> Kern


Synthesizer -up-> Dac
Synthesizer -up-> Button
Synthesizer -up-> Encoder
Synthesizer -up-> Screen
Synthesizer -up-> util
Synthesizer -up-> Timer

Sound --> Signal
Synthesizer --> Sound
Synthesizer --> Menu
Synthesizer --> Envelope

Envelope -up-> Timer
Menu -up-> Screen

@enduml